@@ -16,8 +16,8 @@ DEPEND=">=dev-lang/ruby-1.8.0
 src_compile() {
 	if [ `use unicode` ]; 
 	then
-	    einfo "wxruby needs wxGTK compiled without 'unicode' support."
-	    einfo "Please re-emerge wxGTK."
+	    eerror "wxruby needs wxGTK compiled without 'unicode' support. Run:"
+	    eerror "USE='-unicode' emerge wxGTK wxruby"
 	    die
 	else
 	    cd src
@@ -28,9 +28,21 @@ src_compile() {
 
 src_install() {
 	cd src
-	DESTDIR=${D} 
-	make install || die
-	dodoc ../ChangeLog ../README ../README.linux ../README.mingw ../README.mswin ../README.osx
-	cp -r ../samples ${D}/usr/share/doc/${PF}
+	DESTDIR=${D}
+	local rubyhdr=$(ruby -r rbconfig -e 'print Config::CONFIG["sitearchdir"]')	
+	cp Makefile Makefile.orig 
+	cat Makefile.orig  \
+	| sed "s:hdrdir = .*:hdrdir = ${rubyhdr}:" \
+	> Makefile || die "sed failed"
+	#addwrite $(ruby -r rbconfig -e 'print Config::CONFIG["sitearchdir"]')
+	make install || die "make install failed"
+	for doc in ../COPYING.LIB ../ChangeLog ../README ../README.linux \
+	../README.mingw ../README.mswin ../README.osx; do
+	    [ -s "$doc" ] && dodoc $doc
+	done
+	if [[ -d sample ]]; then
+	    dodir /usr/share/doc/${PF}
+	    cp -a sample ${D}/usr/share/doc/${PF} || die "cp samples failed"
+	fi
 }
 
